# http-0001-ci-add-web-and-android-workflows.patch-

./: CMakeLists.txt  README.md  build-draft-docs.yml  build.gradle.kts  llama_api_stub.h  llamajni.cpp  tue_may_05_2026_image_description_of_oppo_a_58_specs.json  tue_may_05_2026_nexus_v_9.md  v1_ARCHITECTURE.md  v1_app.js  v1_index.html  v2_app.js  v2_index.html  v2_style.css
web-react/: index.html  package.json
web-react/src/: App.jsx  styles.css
web-react/src/__tests__/: todo.test.jsx
web-react/src/components/: TodoApp.jsx  TodoItem.jsx
